Changed hard coded values to dimens.xml. Added animation between activities. Added padding to the body of article.

--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -16,35 +16,33 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:scrollbarStyle="outsideOverlay"
-            android:paddingTop="116dp"
+            android:paddingTop="@dimen/padding_top_recycler_view"
             android:paddingLeft="@dimen/list_side_margin"
             android:paddingRight="@dimen/list_side_margin"
-            android:paddingBottom="28dp" />
+            android:paddingBottom="@dimen/padding_bottom_recycler_view" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <FrameLayout
-        android:id="@+id/toolbar_container"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        app:elevation="@dimen/elevation_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:background="@color/theme_primary"
-        android:elevation="8dp">
-
+        android:layout_height="wrap_content"
+        android:background="@color/theme_primary">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-            android:layout_marginLeft="@dimen/list_toolbar_side_margin"
-            android:layout_marginRight="@dimen/list_toolbar_side_margin"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/theme_primary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_and_padding"
+            android:layout_marginStart="@dimen/margin_and_padding"
+            android:src="@drawable/logo"
+            android:contentDescription="@string/app_name" />
+    </android.support.design.widget.AppBarLayout>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo"
-                android:foregroundGravity="center_horizontal"
-                android:contentDescription="@string/app_name" />
-
-        </android.support.v7.widget.Toolbar>
-    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
