--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -24,4 +24,9 @@
     <color name="ltgray">#ffe0e0e0</color>
     <color name="black">#000000</color>
     <color name="grey">#263238</color>
+    <color name="teal">#E0F2F1</color>
+    <color name="orange">#FFF3E0</color>
+    <color name="darker_orange">#FFE0B2</color>
+    <color name="text_color_title">#fff</color>
+    <color name="text_color_date_author">#8fff</color>
 </resources>
