--- a/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
@@ -4,10 +4,10 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/article_pic_size_for_card_view"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="20dp"
+    card_view:cardCornerRadius="@dimen/card_corner_radius"
+    card_view:cardElevation="@dimen/card_elevation"
     card_view:cardUseCompatPadding="true"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/card_view_layout_margin"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
@@ -21,7 +21,7 @@
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/dynamicHeightNetworkImageView_layout_height"
             android:scaleType="centerCrop"
             android:background="@color/photo_placeholder" />
 
@@ -36,10 +36,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/title_text"
-                android:paddingLeft="16dp"
-                android:paddingTop="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="4dp"
+                android:paddingLeft="@dimen/margin_and_padding"
+                android:paddingTop="@dimen/margin_and_padding"
+                android:paddingRight="@dimen/margin_and_padding"
+                android:paddingBottom="@dimen/title_padding_bottom"
                 android:ellipsize="end"
                 android:textColor="@color/black"
                 android:maxLines="4" />
@@ -49,9 +49,9 @@
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="16dp"
+                android:paddingLeft="@dimen/margin_and_padding"
+                android:paddingRight="@dimen/margin_and_padding"
+                android:paddingBottom="@dimen/margin_and_padding"
                 android:textColor="@color/grey"
                 android:maxLines="2"
                 android:textSize="@dimen/author_name_and_date"
