--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,10 +17,9 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
-
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#009688</color>
+    <color name="theme_primary_dark">#CFD8DC</color>
+    <color name="theme_accent">#1DE9B6</color>
     <color name="ltgray">#ffe0e0e0</color>
     <color name="black">#000000</color>
     <color name="grey">#263238</color>
