Implemented back button navigation using standard ways and removed a lot of code that was not required.

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -51,6 +51,7 @@
                 android:layout_height="@dimen/toolbar_height"
                 app:contentInsetStart="@dimen/up_button_image_size"
                 app:layout_collapseMode="pin"
+                app:navigationIcon="?attr/homeAsUpIndicator"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:titleTextAppearance="@dimen/detail_body_text_size" />
 
