--- a/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
@@ -1,16 +1,14 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/article_pic_size_for_card_view"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    card_view:cardElevation="@dimen/card_elevation"
-    card_view:cardUseCompatPadding="true"
     android:layout_margin="@dimen/card_view_layout_margin"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:foreground="?selectableItemBackground"
+    card_view:cardCornerRadius="@dimen/card_corner_radius"
+    card_view:cardElevation="@dimen/card_elevation"
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,8 +20,9 @@
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dynamicHeightNetworkImageView_layout_height"
+            android:background="@color/photo_placeholder"
             android:scaleType="centerCrop"
-            android:background="@color/photo_placeholder" />
+            android:transitionName="articleImage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,27 +34,23 @@
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/title_text"
-                android:paddingLeft="@dimen/margin_and_padding"
-                android:paddingTop="@dimen/margin_and_padding"
-                android:paddingRight="@dimen/margin_and_padding"
-                android:paddingBottom="@dimen/title_padding_bottom"
                 android:ellipsize="end"
-                android:textColor="@color/black"
-                android:maxLines="4" />
+                android:maxLines="4"
+                android:paddingBottom="@dimen/title_padding_bottom"
+                android:paddingLeft="@dimen/margin_and_padding"
+                android:paddingRight="@dimen/margin_and_padding"
+                android:paddingTop="@dimen/margin_and_padding" />
 
             <TextView
                 android:id="@+id/article_subtitle"
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/margin_and_padding"
-                android:paddingRight="@dimen/margin_and_padding"
-                android:paddingBottom="@dimen/margin_and_padding"
-                android:textColor="@color/grey"
+                android:ellipsize="end"
                 android:maxLines="2"
-                android:textSize="@dimen/author_name_and_date"
-                android:ellipsize="end" />
+                android:paddingBottom="@dimen/margin_and_padding"
+                android:paddingLeft="@dimen/margin_and_padding"
+                android:paddingRight="@dimen/margin_and_padding" />
         </LinearLayout>
     </RelativeLayout>
 
