--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -25,11 +25,6 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <!--<LinearLayout-->
-            <!--android:id="@+id/photo_container"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:background="@color/photo_placeholder">-->
 
             <ImageView
                 android:id="@+id/photo"
@@ -38,11 +33,6 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
-            <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="@dimen/view_height"-->
-            <!--android:background="@drawable/photo_background_protection" />-->
-            <!--</LinearLayout>-->
 
 
             <android.support.v7.widget.Toolbar
@@ -58,11 +48,6 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <!--<com.example.xyzreader.ui.DrawInsetsFrameLayout-->
-    <!--android:id="@+id/draw_insets_frame_layout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollview"
@@ -70,38 +55,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<FrameLayout-->
-        <!--android:id="@+id/photo_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@color/photo_placeholder">-->
-        <!--&lt;!&ndash;suppress AndroidLintContentDescription &ndash;&gt;-->
-        <!--<ImageView-->
-        <!--android:id="@+id/photo"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scaleType="centerCrop" />-->
-
-        <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="@dimen/view_height"-->
-        <!--android:background="@drawable/photo_background_protection" />-->
-
-        <!--</FrameLayout>-->
-
-        <!--<com.example.xyzreader.ui.MaxWidthLinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_horizontal"-->
-        <!--android:layout_marginTop="@dimen/detail_card_top_margin"-->
-        <!--android:background="#fff"-->
-        <!--android:elevation="2dp"-->
-        <!--android:maxWidth="@dimen/detail_card_max_width"-->
-        <!--android:orientation="vertical">-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,43 +77,35 @@
 
                 <TextView
                     android:id="@+id/article_title"
-                    style="?android:attr/textAppearanceLarge"
+                    style="@style/XYZArticleTitleAppearance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:lineSpacingMultiplier="0.9"
-                    android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
-                    android:textColor="@color/text_color_title"
-                    android:textSize="@dimen/detail_title_text_size"
-                    android:textStyle="bold" />
+                    android:paddingBottom="@dimen/detail_metabar_title_bottom_padding" />
 
                 <TextView
                     android:id="@+id/article_byline"
-                    style="?android:attr/textAppearanceSmall"
+                    style="@style/XYZArticleByLineAppearance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_color_date_author" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
             <TextView
                 android:id="@+id/article_body"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/XYZArticleBodyAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                android:paddingBottom="@dimen/detail_body_bottom_margin"
-                android:textColor="@color/black"
-                android:textSize="@dimen/detail_body_text_size" />
+                android:paddingBottom="@dimen/detail_body_bottom_margin" />
 
 
         </LinearLayout>
 
-        <!--</com.example.xyzreader.ui.MaxWidthLinearLayout>-->
-        <!--</FrameLayout>-->
     </android.support.v4.widget.NestedScrollView>
-    <!--</com.example.xyzreader.ui.DrawInsetsFrameLayout>-->
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
@@ -170,6 +115,7 @@
         android:layout_marginBottom="@dimen/detail_inner_horiz_margin"
         android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
         android:layout_marginRight="@dimen/detail_inner_horiz_margin"
+        android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_share"
         app:fabSize="normal" />
 </android.support.design.widget.CoordinatorLayout>
